# mmg

./: .dir-locals.el  .gitignore  .tm_properties  AUTHORS  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  CTestConfig.cmake  Copyright.txt  Dockerfile  FindScotch.cmake  LICENSE  README  README.md  emacs-format-file.el  libelas.dylib  makefile  mmg3d5.2012.04.17.tgz  mmg3d5.2012.05.02.tgz  mmg3d5.2012.09.05.tgz  mmg3d5.2012.10.01.tgz  mmg3d5.2012.10.03.tgz  mmgConfig.cmake.in  patch  sonar-project.properties  testing.cmake  testing_insert_singul.cmake  testing_rerun.cmake
.ccls-cache/@@Users@carlos@Projects@mmg/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityVersions.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctermid.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_intmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint16_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint32_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint64_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint8_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uintmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@alloca.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_limits.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_mcontext.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_param.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@arch.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@endian.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@limits.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@param.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@signal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@assert.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@bsm@audit.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@complex.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@float.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@libkern@_OSByteOrder.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@libkern@arm@OSByteOrder.h.blob  (+138 more)
.github/: FUNDING.yml
.github/workflows/: ccpp.yml  ci-osx.yml  dbg.yml  (+9 more)
CMakeRep/: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  DartConfig.cmake  README  libSystem+libmesh5.supp  testing.cmake
Doxygen/: Doxyfile  Doxyfile.in  README
Scripts/: README  cmake-clean.sh  genfort.pl  genheader.c
doxygen/: Doxyfile.in  README
python/: Makefile  pymmg.cpp  test.py  vtk_helpers.py
scripts/: JENKINSFILE.sonarqube  README  genfort.pl  genheader.c  genpython.py  git_log_mmg.sh  mmg_classes.py  mmg_functions.py  writeAPI.py
sources/: API_functions.c  analys.c  bezier.c  boulep.c  bucket.c  cenrad.c  chkmsh.c  chrono.c  colver.c  compil.date  delaunay.c  denois.c  eigenv.c  eigenv.h  hash.c  inout.c  isosiz.c  libmesh5.c  libmesh5.h  libmmg3d5.c  libmmg3d5.h  libmmg3d5f.c  librnbg.c  librnbg.h  mmg3d.c  mmg3d.h  mmg3d1.c  mmg3d1_delone.c  mmg3d2.c  mmg3d5_redefine.h  mmg3d_redefine.h  movpt.c  pampautils.c  quality.c  scalem.c  shared_func.h  singul.c  split.c  swap.c  swapgen.c  (+3 more)
sourcescommon/: eigenv.c  libmesh5.c
sourcesmmg3d/: API_functions.c  API_functionsf.c  boulep.c  bucket.c  colver.c  hash.c  inout.c  libmmg3d5.c  libmmg3d5.h  libmmg3d5f.h  librnbg.c  mmg3d.c  mmg3d.h  mmg3d1.c  mmg3d1_delone.c  mmg3d5_redefine.h  movpt.c  pampautils.c  split.c  zaldy.c
sourcesmmgs/: analys.c  anisosiz.c  bezier.c  chrono.c  chrono.h  colver.c  eigenv.c  gentools.c  hash.c  inout.c  isosiz.c  libmesh5.c  mettools.c  mmgs.c  mmgs.h  mmgs1.c  quality.c  roots.c  zaldy.c
src/: libmmg.h
(+615 files in other folders)
